--- a/damda/app/src/main/res/layouts/activity/layout/activity_main.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_main.xml
@@ -31,26 +31,32 @@
         android:layout_height="1dp">
 
     </LinearLayout>
+
     <FrameLayout
         android:id="@+id/main_content"
-        android:layout_below="@+id/toolbar_division"
-        android:layout_above="@+id/nav_division"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/nav_division"
+        android:layout_below="@+id/toolbar_division" />
+
     <LinearLayout
         android:id="@+id/nav_division"
-        android:background="@color/colorDivision"
-        android:orientation="horizontal"
-        android:layout_above="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="1dp">
+        android:layout_height="1dp"
+        android:layout_above="@+id/bottom_navigation"
+        android:background="@color/colorDivision"
+        android:orientation="horizontal">
 
     </LinearLayout>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:menu="@menu/bottom_navigation_main"></com.google.android.material.bottomnavigation.BottomNavigationView>
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:menu="@menu/bottom_navigation_main"></com.google.android.material.bottomnavigation.BottomNavigationView>
+
+
 
 </RelativeLayout>
