--- a/damda/app/src/main/res/layouts/item/layout/list_item_photo.xml
+++ b/damda/app/src/main/res/layouts/item/layout/list_item_photo.xml
@@ -32,6 +32,7 @@
             android:id="@+id/cb_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColorLink="@color/bluebell"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/iv_image" />
     </androidx.constraintlayout.widget.ConstraintLayout>
