--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
@@ -22,59 +22,48 @@
         android:id="@+id/top_division"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/my_toolbar"
-        android:orientation="horizontal"/>
-    <ScrollView
+        android:layout_below="@+id/my_toolbar"/>
+
+    <TextView
+        android:gravity="center"
+        android:id="@+id/connect_state"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/top_division"
+        android:layout_gravity="center"
+        android:layout_below="@+id/top_division"
+        android:text="PC와 연결이 필요합니다."
+        android:textSize="30sp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:gravity="center"
-        android:orientation="vertical">
+        android:layout_below="@+id/top_division">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/select_pc"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:padding="15dp"
+            android:text="PC 선택"
+            android:textSize="45sp" />
 
-            <ImageView
-                android:id="@+id/addphoto_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
-                android:layout_margin="8dp"
-                android:contentDescription="사진을 등록해주세요" />
+        <Button
+            android:id="@+id/select_picture"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:padding="15dp"
+            android:text="사진 선택"
+            android:textSize="45sp" />
 
-            <LinearLayout
-                android:id="@+id/image_division"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/editText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/addphoto_edit_explain"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:autofillHints="사진 설명"
-                    android:gravity="top"
-                    android:hint="@string/hint_image_content" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/addphoto_btn_upload"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:text="@string/upload_image"
-                android:theme="@style/ButtonStyle" />
-        </LinearLayout>
-    </ScrollView>
+        <Button
+            android:id="@+id/search_pc"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="PC 탐색"
+            android:textSize="45sp" />
+    </LinearLayout>
 </RelativeLayout>
