--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
@@ -22,48 +22,68 @@
         android:id="@+id/top_division"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/my_toolbar"/>
+        android:layout_below="@id/my_toolbar"
+        android:orientation="horizontal" />
 
-    <TextView
-        android:gravity="center"
-        android:id="@+id/connect_state"
+    <ScrollView
+        android:id="@+id/image_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_below="@+id/top_division"
-        android:text="PC와 연결이 필요합니다."
-        android:textSize="30sp"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_division"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/addphoto_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="사진을 등록해주세요"
+            android:minHeight="400dp"
+            android:scaleType="fitCenter"
+            android:autofillHints="사진"/>
+
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/image_division"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/image_scroll"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_division"
         android:orientation="vertical"
-        android:gravity="center"
-        android:layout_below="@+id/top_division">
+        android:gravity="center">
 
         <Button
-            android:id="@+id/select_pc"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="PC 선택"
-            android:textSize="45sp" />
+            android:id="@+id/select_photo_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="15dp"
+            android:text="@string/select_image"
+            android:theme="@style/ButtonStyle"
+            android:textColor="@color/colorWhite"
+            android:background="@color/enableButton"/>
 
         <Button
-            android:id="@+id/select_picture"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:padding="15dp"
-            android:text="사진 선택"
-            android:textSize="45sp" />
-
-        <Button
-            android:id="@+id/search_pc"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:text="PC 탐색"
-            android:textSize="45sp" />
+            android:id="@+id/upload_photo_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="35dp"
+            android:text="@string/upload_image"
+            android:textColor="@color/colorWhite"
+            android:background="@color/disableButton"/>
     </LinearLayout>
+
+
 </RelativeLayout>
