--- a/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
@@ -9,16 +9,17 @@
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_photo"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_above="@+id/tvGalleryTitle"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="92dp"
         android:background="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
