--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_photo_list.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_photo_list.xml
@@ -74,13 +74,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/bluebell"
+        android:background="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
             android:id="@+id/btn_photos_delete"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/ic_delete"
@@ -92,8 +92,8 @@
 
         <Button
             android:id="@+id/btn_download"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/ic_download"
@@ -105,8 +105,8 @@
 
         <Button
             android:id="@+id/btn_share"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/ic_share"
