--- a/damda/app/src/main/res/layouts/fragment/layout/activity_family_list.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/activity_family_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:elevation="4dp"
         app:title="가족 목록" />
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,8 +20,22 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         >
+        <TextView
+            android:id="@+id/member_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="4dp"
+            android:text="@string/family_info"
+            />
+        <View
+            android:layout_below="@+id/member_info"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#000000"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/family_list"
+            android:layout_below="@+id/member_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </RelativeLayout>
