--- a/damda/app/src/main/res/layouts/activity/layout/list_item_video.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_video.xml
@@ -1,24 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/chat_message_item_layout"
+    android:id="@+id/video_item_layout"
     android:layout_width="match_parent"
     android:layout_height="400dp"
-    android:padding="10dp">
-    <VideoView
-        android:id="@+id/video"
+    android:padding="10dp"
+    android:gravity="center">
+    <ImageView
+        android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
+        android:src="@drawable/no_image"
         android:layout_height="300dp">
-
-    </VideoView>
+    </ImageView>
     <TextView
-        android:id="@+id/search_fullname"
+        android:id="@+id/video_title"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_below="@id/video"
-        android:text="제목"
-        android:textSize="20dp"
+        android:textSize="20sp"
+        android:layout_below="@+id/thumbnail"
         android:textColor="@color/black"
         />
-
-
-
 </RelativeLayout>
