--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_video.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_video.xml
@@ -9,13 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="영상 추가하기"/>
-    <VideoView
-        android:id="@+id/videoPreview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/video_list"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"/>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/video_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
