--- a/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
@@ -36,6 +36,7 @@
         android:id="@+id/my"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:textSize="30sp"
         android:text="나" />
 
