--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
@@ -182,6 +182,29 @@
             android:gravity="center_vertical"
             android:textColor="@color/black"/>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/setting"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="자동업로드 설정"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_next"/>
+    </LinearLayout>
     <TextView
         android:layout_marginTop="4dp"
         android:id="@+id/textView3"
@@ -194,7 +217,7 @@
         android:layout_height="0.5dp"
         android:background="@color/gray"/>
     <LinearLayout
-        android:id="@+id/EditUser"
+        android:id="@+id/editUser"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:padding="5dp"
@@ -203,10 +226,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="개인 정보 수정"
+            android:text="개인정보 수정"
             android:textSize="15sp"
             android:gravity="center_vertical"
             android:textColor="@color/black"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_next"/>
     </LinearLayout>
 
     <Button
