--- a/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
@@ -79,10 +79,14 @@
             android:layout_height="match_parent"
             />
     </com.google.android.material.textfield.TextInputLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nameLayout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="2"
         android:hint="이름"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
@@ -96,7 +100,16 @@
             android:layout_height="match_parent"
             />
     </com.google.android.material.textfield.TextInputLayout>
-    <TextView
+        <Spinner
+            android:layout_marginTop="5dp"
+            android:id="@+id/spinner"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+        />
+    </LinearLayout>
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginTop="4dp"
