--- a/damda/app/src/main/res/layouts/activity/layout/activity_request_list.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_request_list.xml
@@ -15,8 +15,24 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+        <TextView
+            android:id="@+id/member_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="4dp"
+            android:text="@string/add_info"
+            />
+        <View
+            android:layout_below="@+id/member_info"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#000000"/>
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_below="@+id/member_info"
             android:id="@+id/rv_main_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
