--- a/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
@@ -1,50 +1,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/chat_message_item_layout"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:padding="10dp">
-
+    android:layout_height="135dp">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
     <TextView
         android:id="@+id/search_fullname"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="제목"
-        android:textSize="15dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/black"
+        android:textSize="17sp"
+        android:layout_gravity="center"
         />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp">
+        </Space>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+        <TextView
+            android:id="@+id/response"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/black_translucent"
+            android:layout_marginLeft="4dp"
+            android:visibility="gone"/>
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:theme="@style/ButtonStyle"
+            android:textSize="13sp"
+            android:text="수락"
+            />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:theme="@style/DeleteButton"
+            android:textSize="13sp"
+            android:text="거절"
+            />
+        </LinearLayout>
+    </LinearLayout>
     <Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
     />
     <TextView
-        android:id="@+id/response"
+        android:id="@+id/make_album"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="선택할 수 있는\n앨범이 없습니다."
+        android:visibility="gone"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="15dp"
+        />
+    <Spinner
+        android:id="@+id/album_spinner"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:gravity="center_vertical"/>
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:theme="@style/ButtonStyle"
-        android:textSize="13sp"
-        android:text="수락"
-        />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:theme="@style/DeleteButton"
-        android:textSize="13sp"
-        android:text="거절"
-        />
-<!--    <View-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0.5dp"-->
-<!--        android:background="@color/black" />-->
-
-
+        android:layout_gravity="center_vertical">
+    </Spinner>
 </LinearLayout>
