--- a/damda/app/src/main/res/layouts/activity/layout/list_item_mission.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_mission.xml
@@ -24,21 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_checkmission"
-        android:layout_width="109dp"
-        android:layout_height="92dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="0dp"
-        android:background="@drawable/ripple_effect"
-        android:backgroundTint="#86FFEB3B"
-        android:backgroundTintMode="src_over"
-        android:hapticFeedbackEnabled="true"
-        android:text="도전!"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:visibility="invisible" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_mission"
         android:layout_width="109dp"
@@ -52,6 +37,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pb_mission"
         app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/btn_checkmission"
+            android:layout_width="88dp"
+            android:layout_height="25dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/ripple_effect"
+            android:backgroundTint="#86FFEB3B"
+            android:backgroundTintMode="src_over"
+            android:hapticFeedbackEnabled="true"
+            android:text="바로가기"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_point"
@@ -75,8 +77,6 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="#7F9497"
             android:backgroundTint="#AB2196F3"
